# grimoire

./: .env.template  .gitignore  CLAUDE.md  QUICK_START.md  README.md  cli.py  pyproject.toml  requirements.txt
config/: .gitignore  writing_style1.template.md  writing_style2.template
document/: api.md  arch.md  notes_safety_rewrite_prompt.md  scanned_pdf_handoff_prompt.md
prompts/system/: concept_system.md  exercise_system.md  fix_system.md  review_system.md  tldr_system.md  writing_system.md  writing_verbose_system.md
prompts/user/: concept_user.md  exercise_user.md  fix_user.md  review_user.md  tldr_user.md  writing_user.md  writing_verbose_user.md
scripts/: m3_prototype.py
src/: batch.py  config.py  glossary.py  log.py  orchestrator.py  packager.py  parse.py  pdf_parser.py  progress.py  review.py  schema.py  section_splitter.py
src/agents/: base_agent.py  concept.py  exercise.py  fix.py  review.py  tldr.py  vision_client.py  writing.py
src/parsers/: __init__.py  base.py  pdf_images.py  pdf_parser.py  vision_pdf_parser.py
src/parsers/engines/: __init__.py  base.py  playwright.py  static.py  wolai.py
src/templates/: extra.css
tests/: test_pdf_images.py  test_pdf_parser.py  test_section_splitter.py
